Bug 453929.  Cache getElementsBy(Class)Name return values.  r=jst